[project]
name = "domovoy"
version = "0.1.0"
description = "Domovoy — HOA requests Telegram bot: tracked, votable, ageable resident requests"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "python-telegram-bot[job-queue]>=21.0,<22.0",
    "aiosqlite>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/domovoy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# macOS can mark the venv's editable-install .pth as hidden, which Python skips;
# putting src on the path directly keeps tests independent of that.
pythonpath = ["src"]
